--- a/Italian/main/Contacts.apk/res/values-it/strings.xml
+++ b/Italian/main/Contacts.apk/res/values-it/strings.xml
@@ -375,8 +375,6 @@ Per aggiungere contatti alla lista dei preferiti:
     <string name="description_plus_button">più</string>
     <string name="description_view_contact_detail">Visualizza contatto</string>
     <string name="no_sdcard_message">Nessun archivio trovato.</string>
-    <string name="import_from_sim">Importa da SIM</string>
-    <string name="import_from_sim2">Importa da SIM 2</string>
     <string name="import_from_sdcard">Importa da archivio</string>
     <string name="export_to_sdcard">Esporta in archivio</string>
     <string name="share_visible_contacts">Condividi contatti visibili</string>
@@ -706,14 +704,19 @@ Scegli una delle seguenti opzioni:"</string>
     <string name="dialog_voicemail_airplane_mode_message">Per chiamare la segreteria, disattiva prima la modalità Aereo.</string>
     <string name="action_menu_overflow_description">Altre opzioni</string>
     <string name="yellowpage_navigation_network_location_enabled">Service is open, you could disable it in location settings</string>    
-    <string name="export_to_sim_title">Esportazione sulla carta SIM…</string>
+    <string name="import_from_sim">Importa da SIM</string>
+    <string name="import_from_sim2">Importa da SIM 2</string>
+    <string name="export_to_sim_title">Esportazione…</string>
+    <string name="import_from_sim1">Importa da SIM 1</string>
     <string name="sim_no_contact">Nessun contatto sulla carta SIM</string>
     <string name="sim_indexed_contact_not_exist">La posizione %1$d sulla carta SIM non è valida: deve essere compresa tra %2$d e %3$d.</string>
     <string name="sim_contact_search_error">Si è verificato un errore</string>
     <string name="account_sim">Carta SIM</string>
-    <string name="account_sim2">Carta SIM %d</string>    
+    <string name="account_sim2">Carta SIM %d</string>
     <string name="display_sim_contacts">Mostra contatti SIM</string>
     <string name="export_to_sim">Esporta sulla carta SIM</string>
+    <string name="export_to_sim1">Esporta su SIM 1</string>
+    <string name="export_to_sim2">Esporta su SIM 2</string>
     <string name="sim_card_no_free_space_title">Carta SIM piena</string>
     <string name="sim_card_no_free_space_message">Spazio insufficiente: la tua scheda SIM è piena</string>
     <string name="sim_contacts">Contatti sulla carta SIM</string>
@@ -725,15 +728,16 @@ Scegli una delle seguenti opzioni:"</string>
     <string name="sim_contact_existing">Il contatto esiste già</string>
     <string name="sim_contact_invalid">Contatto SIM non valido</string>
     <string name="pref_key_sim_manage">Gestione SIM</string>
-    <string name="pref_key_sim_manage2">Configura carta SIM 2</string>    
-    <string name="simContacts_airplaneMode">Per importare i contatti tramite la carta SIM, disattivare la modalità Aereo.</string>
+    <string name="pref_key_sim_manage1">Configura SIM 1</string>
+    <string name="pref_key_sim_manage2">Configura SIM 2</string>
+    <string name="simContacts_airplaneMode">Per importare i contatti tramite la SIM, disattivare la modalità Aereo.</string>
     <string name="readingSimContacts">Lettura carta SIM…</string>
-    <string name="confirm_delete_sim_entry_miui">Cancellare %d contatti dalla carta SIM?</string>
-    <string name="importing_sim_contacts_miui">Importazione contatti dalla carta SIM…</string>
-    <string name="import_sim_entries_finish">Importazione contatti dalla carta SIM eseguita</string>
-    <string name="deleting_sim_entry_miui">Cancellazione contatti sulla carta SIM…</string>
-    <string name="delete_sim_entries_finish">Cancellazione contatti sulla carta SIM completata</string>
-    <string name="simContacts_empty">Nessun contatto sulla carta SIM</string>
+    <string name="confirm_delete_sim_entry_miui">Cancellare %d contatti da SIM?</string>
+    <string name="importing_sim_contacts_miui">Importazione contatti da SIM…</string>
+    <string name="import_sim_entries_finish">Importazione contatti da SIM eseguita</string>
+    <string name="deleting_sim_entry_miui">Cancellazione contatti sulla SIM…</string>
+    <string name="delete_sim_entries_finish">Cancellazione contatti sulla SIM completata</string>
+    <string name="simContacts_empty">Nessun contatto sulla SIM</string>
     <string name="sim_account_name">SIM</string>
     <string name="summary_kind_title">Sommario</string>
     <string name="callrecordview_item_newcontact">Nuovo contatto</string>
@@ -833,7 +837,6 @@ Scegli una delle seguenti opzioni:"</string>
     <string name="preference_import_export_title">Importa/Esporta contatti</string>
     <string name="import_vcard_description">Importa contatti dalla tua scheda SD</string>
     <string name="export_vcard_description">Esporta vCard sulla scheda SD</string>
-    <string name="export_to_sim2">Esporta su SIM 2</string>
     <string name="export_sim_contact_finish_success">Copiato/i %d contatto/i</string>
     <string name="export_sim_contact_finish_failure">Trasferiti: %1$d Rimasti: %2$d</string>
     <string name="pref_title_account_import">Importa da account</string>
@@ -1065,6 +1068,7 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="toast_copying">Copia…</string>
     <string name="toast_copy_done">Eseguito</string>
     <string name="group_name">I miei gruppi</string>
+    <string name="starred_yellowpage">Cartelle preferite</string>
     <string name="import_all_sim_entries_miui">Importa tutti i contatti</string>
     <string name="import_sim_entry_miui">Importa</string>
     <string name="delete_sim_entry_miui">Cancella</string>
