--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -457,6 +457,10 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="show_check_security_url_check_tip_dialog_description">"L'indirizzo di questo sito verrà inviato ai server Xiaomi per verificarne la sicurezza. Puoi disattivare questa funzione nelle Impostazioni."</string>
     <string name="pref_check_security_url_title">Verifica sicurezza URL</string>
     <string name="pref_check_security_url_summary">Invia ai server Xiaomi per verificarne la sicurezza</string>
+    <string name="block_ads_title">Il contenuto potrebbe includere pubblicità</string>
+    <string name="block_ads_message">Vuoi bloccare i messaggi da questo sito?</string>
+    <string name="block_ads_choice_continue">Continua</string>
+    <string name="block_ads_choice_block">Blcca</string>
     <string name="pref_video_preload_title">Precarica video</string>
     <string name="pref_video_preload_dialogtitle">Video in precaricamento</string>
     <string name="bookmark_needs_url">Il segnalibro deve avere una posizione.</string>
