--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -152,7 +152,10 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="checking_account">Verifica account…</string>
     <string name="button_cancel">Annulla</string>
     <string name="mili_center">Mi Credit</string>
+    <string name="mibi_balance">%s Mi Credit</string>
     <string name="loading_mili_center">Caricamento…</string>
+    <string name="hide_mibi_info">Le informazioni sui Mi credit sono state nascoste</string>
+    <string name="failed_get_mibi_info">Impossibile recuperare informazioni sui Mi Credit</string>
     <string name="mipay_center">Account bancari</string>
     <string name="sina_weibo">Sina Weibo</string>
     <string name="bind_sina_weibo">Autorizza Sina Weibo</string>
@@ -213,6 +216,7 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="account_bind_settings">Collega account</string>
     <string name="account_bind_devices">Dispositivi associati</string>
     <string name="account_dspt_provision">Utilizza un solo account per tutti i nostri prodotti.</string>
+    <string name="account_dspt_provision2">Leggi altro</string>
     <string name="find_device_dspt">Blocca o cancella questo dispositivo da remoto.</string>
     <string name="login_title">Accedi al tuo account Mi</string>
     <string name="login_step2_title">Accedi in modo protetto</string>
@@ -241,4 +245,11 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="micloud_sync_info">Ci sono %d contenuti da sincronizzare</string>
     <string name="micloud_sync_info_synced">Tutti i contenuti sono aggiornati</string>
     <string name="micloud_space_info">Rimanente: %s</string>
+    <string name="sim_index_info">SIM %1$d - %2$s</string>
+    <string name="choose_which_one_sim">Scegli un numero di telefono</string>
+    <string name="account_learn_more_title">Crea un Mi Account</string>
+    <string name="cloud_service_dspt">Sincronizza le tue foto, i contatti, le note e le app, su tutti i tuoi dispositivi.</string>
+    <string name="theme_store">MIUI Theme Store</string>
+    <string name="theme_store_dspt">Scegli il tuo look. Centinaia di temi gratuiti e personalizzabili per rendere unico il tuo telefono.</string>
+    <string name="mi_account_dspt_provision">Accedi a Mi Cloud, MIUI Theme Store ed altri servizi Mi con un unico account.</string>
 </resources>
