--- a/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
@@ -113,11 +113,11 @@
     <string name="heavy_snow" />
     <string name="winter_solstice" />
     <string name="select">Seleziona</string>
-    <string name="select_all">Seleziona tutto</string>
+    <string name="select_all">Sel.tutto</string>
     <string name="cut">Taglia</string>
     <string name="copy">Copia</string>
     <string name="paste">Incolla</string>
-    <string name="replace">Sostituisci</string>
+    <string name="replace">Cambia</string>
     <string name="alwaysUsePrompt">Ricorda questa scelta</string>
     <string name="call_record_sample_prefix_miui">Chiamata</string>
     <string name="fm_record_smaple_prefix_miui">Registrazione FM</string>
