--- a/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
@@ -1,5 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="status_bar_toggle_ac">Access</string>
+    <string name="status_bar_toggle_bluetooth">Bluetooth</string>
+    <string name="status_bar_toggle_brightness">Brightness</string>
+    <string name="status_bar_toggle_auto_brightness">Auto</string>
+    <string name="status_bar_toggle_data">Data</string>
+    <string name="status_bar_toggle_divider">More</string>
+    <string name="status_bar_toggle_flight_mode">Airplane</string>
+    <string name="status_bar_toggle_gps">GPS</string>
+    <string name="status_bar_toggle_lock">Lock</string>
+    <string name="status_bar_toggle_mute">Silent</string>
+    <string name="status_bar_toggle_network_type">Network</string>
+    <string name="status_bar_toggle_privacy_mode">Guest</string>
+    <string name="status_bar_toggle_reboot">Reboot</string>
+    <string name="status_bar_toggle_rotate">Rotation</string>
+    <string name="status_bar_toggle_screen_button">Disable</string>
+    <string name="status_bar_toggle_screenshot">Screenshot</string>
+    <string name="status_bar_toggle_shutdown">Power</string>
+    <string name="status_bar_toggle_sync">Sync</string>
+    <string name="status_bar_toggle_torch">Torch</string>
+    <string name="status_bar_toggle_vibrate">Vibrate</string>
+    <string name="status_bar_toggle_wifi">WLAN</string>
+    <string name="status_bar_toggle_power_mode">Perform</string>
+    <string name="status_bar_toggle_drive_mode">Car</string>
+    <string name="status_bar_toggle_wifi_ap">WLAN</string>
+    <string name="status_bar_toggle_quiet_mode">DND</string>
+    <string name="status_bar_toggle_sync_auto">Sync</string>
+    <string name="status_bar_toggle_sync_manual">Sync</string>
+    <string name="status_bar_toggle_syncing">Syncing</string>
     <string name="shutdown_confirm_title">Il tuo dispositivo sarà spento.</string>
     <string name="shutdown_progress">Spegnimento in corso…</string>
     <string name="reboot_confirm_title">Il tuo dispositivo sarà riavviato.</string>
