--- a/Italian/device/mocha/Settings.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/Settings.apk/res/values-it/strings.xml
@@ -2178,6 +2178,8 @@ Disabilitare le finestre flottanti?"</string>
     <string name="wallpaper_live">Sfondo animato</string>
     <string name="key_settings_title">Tasti</string>
     <string name="key_settings">Tasti</string>
+	<string name="screen_key_press">Pressione semplice tasti</string>
+    <string name="screen_key_press_action">Attivazione</string>
     <string name="screen_key_long_press">Pressione prolungata tasti</string>
     <string name="screen_key_long_press_action">Esegui funzionalità</string>
     <string name="app_switch_key">Recenti</string>
