--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -6,6 +6,16 @@
     <string name="cta_button_text_cancel">Annulla</string>
     <string name="cta_button_text_agree">Sì</string>
     <string name="cta_settings">"Consenti l'utilizzo della rete dati"</string>
+    <string name="title_optimizer">Pulizia</string>
+    <string name="header_optimizer">Utilizzando questa funzione accetti i <a href="http://www.cmcm.com/about/privacy_zh.html?p=cm">Termini del Servizio</a> di Clean Master.</string>
+    <string name="text_optimizer">Utilizza il motore di Pulizia onlinee</string>
+    <string name="summary_optimizer">Carica e confronta i nomi delle cartelle sconosciute con il database online</string>
+    <string name="button_optimizer">OK</string>
+    <string name="title_antivirus">Scansione Virus</string>
+    <string name="header_antivirus">Utilizzando questa funzione accetti i "<a href="http://misc.3g.qq.com/g/agreement/index.jsp?id=7">Termini del Servizio</a> di Tencent.</string>
+    <string name="text_antivirus">Utilizza database virus online</string>
+    <string name="summary_antivirus">Carica e controlla nome e dettagli applicazioni utilizzando il database virus online.</string>
+    <string name="button_antivirus">OK</string>
     <string name="power_center_title">Batteria</string>
     <string name="power_center_consume_rank">Utilizzo batteria</string>
     <string name="power_center_custom_title">Risparmio batteria</string>
@@ -194,6 +204,8 @@
     <string name="usage_type_wake_lock">Mantieni attivo</string>
     <string name="usage_type_wifi_running">Wi-Fi attivo</string>
     <string name="usage_type_phone">Telefono</string>
+    <string name="usage_type_data_wifi_send">Dati Wi-Fi inviati</string>
+    <string name="usage_type_data_wifi_recv">WDati Wi-Fi ricevuti</string>
     <string name="usage_type_audio">Audio</string>
     <string name="usage_type_video">Video</string>
     <string name="usage_type_on_time">Tempo attivazione</string>
@@ -212,6 +224,9 @@
     <string name="every_day">Tutti i giorni</string>
     <string name="legal_workday">Festivi</string>
     <string name="never">Solo una volta</string>
+    <string name="legal_workday_invalidate">Dati scaduti (Attualmente attivo da Lunedì a Venerdì)</string>
+    <string name="legal_workday_invalidate_message">(Dati scaduti,premi per aggiornare interconnessioni)</string>
+    <string name="legal_workday_message">(Salta le festività)</string>
     <string name="app_name_securitycenter">Sicurezza</string>
     <string name="ok">OK</string>
     <string name="cancel">Annulla</string>
@@ -246,7 +261,7 @@
     <string name="examination_score_has_virus">Ehi! Sono state rilevate alcune app sospette</string>
     <string name="descx_scanning_item">Scansione %s</string>
     <string name="descx_start_scan_system">Avvio scansione protezione del sistema</string>
-    <string name="descx_finish_scan_system">Completamento scansine protezione del sistema</string>
+    <string name="descx_finish_scan_system">Completamento scansione protezione del sistema</string>
     <string name="descx_cleanuping_item">Ottimizzazione %s</string>
     <string name="descx_start_cleanup_system">Avvio ottimizzazione protezione del sistema</string>
     <string name="descx_finish_cleanup_system">Completamento ottimizzazione protezione del sistema</string>
@@ -368,6 +383,7 @@
     <string name="Settings_title_anti_spam">Impostazioni antispam</string>
     <string name="Settings_title_power_center">Impostazioni alimentazione</string>
     <string name="Settings_title_anti_virus">Impostazioni antivirus</string>
+    <string name="settings_title_permission">Impostazioni Permessi</string>
     <string name="pref_category_title_virus_lib_auto_update">Impostazioni definizioni virus</string>
     <string name="menu_item_virus_lib_auto_update_title">Aggiorna automaticamente</string>
     <string name="pref_category_title_reference_settings">Impostazioni correlate</string>
@@ -428,7 +444,7 @@
     <string name="pref_summary_garbage_cleanup_check_size">Notificami quando il cestino raggiungono una certa dimensione</string>
     <string name="pref_title_garbage_cleanup_check_size">Dimensione per allarme cestino</string>
     <string name="pref_title_expand_cache_group">Espandi i gruppi della cache</string>
-    <string name="pref_summary_expand_cache_group">I gruppi nella lsita cache saranno espansi in automatico</string>
+    <string name="pref_summary_expand_cache_group">I gruppi nella lista cache saranno espansi in automatico</string>
     <string name="msg_cleanup_db_update_checking">Verifica…</string>
     <string name="msg_update_error_code_success">Aggiornamento completato</string>
     <string name="msg_update_error_code_no_newer_db">Aggiornato</string>
@@ -476,7 +492,7 @@
     <string name="dialog_title_check_all">Seleziona tutto</string>
     <string name="button_text_add_to_white_list">Aggiungi alle eccezioni</string>
     <string name="button_text_cleanup">Pulizia</string>
-    <string name="button_text_install">Installla</string>
+    <string name="button_text_install">Installa</string>
     <string name="hints_apk_version">Versione: %s</string>
     <string name="apk_status_uninstalled">Non installata</string>
     <string name="apk_status_installed_old">Vecchia versione</string>
@@ -586,9 +602,17 @@
     <string name="hints_title_garbage">Cestino</string>
     <string name="toast_virus_in_cloud_scanning">Impossibile interrompere la scasione del cloud</string>
     <string name="activity_title_cache_data">Cache</string>
-    <string name="title_dev_yes">Opzioni svilippatore disattivate</string>
+    <string name="title_dev_yes">Opzioni sviluppatore disattivate</string>
     <string name="title_dev_no">Opzioni sviluppatore attivate</string>
     <string name="summary_dev">Impedisci alle app di accedere ai dati utente</string>
     <string name="cache_sort_type_item_size">Ordina per dimensione</string>
     <string name="cache_sort_type_item_name">Ordina per nome</string>
+    <string name="menu_item_app_permissions_control">Gestione permessi</string>
+    <string name="menu_item_control_app_permissions">Chiedi il permesso prima di consentire alle applicazioni di leggere i tuoi contatti, accedere al registro chiamate, modificare le impostazioni di sistema o accedere alla fotocamera ed altre risorse.</string>
+    <string name="permission_close_permission_control_dialog_title">Disattivare Gestione Permessi?</string>
+    <string name="permission_close_permission_control_dialog_msg">Quando la Gestione dei Permessi è disattivata, le applicazioni non chiederanno il permesso per leggere i tuoi contatti, accedere al registro chiamate, modificare le impostazioni di sistema o accedere alla fotocamera ed altre risorse.</string>
+    <string name="permission_permission_control_closed_desc_dialog_title">Gestione Permessi disattivato</string>
+    <string name="permission_permission_control_closed_desc_dialog_msg">Le applicazioni non chiederanno il permesso di leggere i tuoi contatti, accedere al registro chiamate, modificare le impostazioni di sistema o accedere alla fotocamera ed altre risorse.Puoi disattivare questa funzione nelle impostazioni dei Permessi.</string>
+    <string name="pref_title_open_optimizer_cloud_scan">Usa il motore di Pulizia online</string>
+    <string name="pref_summary_open_optimizer_cloud_scan">Carica e confronta nomi di file sconosciuti con il database online</string>
 </resources>
