--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -52,6 +52,7 @@
     <string name="status_bar_settings_toggle_collapse_after_clicked">Collassa dopo il tocco</string>
     <string name="status_bar_settings_show_screenshot_notification">Mostra notifiche screenshot</string>
     <string name="status_bar_settings_status_bar">Barra di stato</string>
+    <string name="status_bar_settings_show_notification_icon">Mostra icona di notifica</string>
     <string name="status_bar_settings_show_network_speed">Mostra velocità di connessione</string>
     <string name="status_bar_settings_expandable_under_keyguard">Abilita nella schermata di blocco</string>
     <string name="status_bar_settings_basic_settings">Impostazioni base</string>
@@ -2807,7 +2808,9 @@ Disabilitare le finestre flottanti?"</string>
     <string name="free_wifi_user_agreement">Quando utilizzi WiWide per collegarti ad una rete, verrà utilizzato il tuo numero telefonico per verificare la tua identità.</string>
     <string name="free_wifi_user_agreement_allow">OK</string>
     <string name="free_wifi_user_agreement_title">Termini di utilizzo</string>
+    <string name="translation_contributors_title">Hanno contribuito</string>
     <string name="translation_contributors_summary" />
+    <string name="wifi_type_approval_title">Approvazione tipologia</string>
     <string name="status_sim">Stato SIM</string>
     <string name="status_sim_1">SIM1</string>
     <string name="status_sim_2">SIM2</string>
@@ -2843,4 +2846,5 @@ Disabilitare le finestre flottanti?"</string>
     <string name="miracast_PC2THOR_streaming_on">Il display wireless non è disponibile perché un PC sta trasmettendo a questo dispositivo.</string>
     <string name="miracast_disable_dhcp">Disattiva HDCP</string>
     <string name="miracast_enable_dhcp">Attiva HDCP</string>
+    <string name="status_bar_toggle_arrangement">Gestione comandi</string>
 </resources>
